# CodeFlare

./: README.md  app.py  main.py  models.py  pyproject.toml  requirement.txt  requirements.txt  routes.py  utils.py
attached_assets/: Pasted-If-your-project-is-specifically-for-the-Google-Solution-Challenge-the-focus-should-be-on-aligning--1742115113860.txt
instance/: eco_waste.db  waste_management.db
routes/: __init__.py  api.py  auth.py  main.py
static/css/: custom.css  style.css
static/js/: analytics.js  carbon_footprint.js  carbon_tracker.js  charts.js  classification.js  gamification.js  main.js  map.js  maps.js  waste_classification.js  waste_map.js  waste_upload.js
templates/: 404.html  500.html  analytics.html  base.html  carbon_tracker.html  classify.html  dashboard.html  index.html  layout.html  login.html  map.html  profile.html  register.html  simple_index.html  simple_layout.html  sustainable_goals.html  waste_classification.html  waste_map.html
templates/auth/: login.html  register.html
utils/: carbon_calculator.py  maps_api.py  maps_helper.py  vision_api.py  waste_classifier.py
