[tool.poetry]
name = "codeflare"
version = "0.1.0"
description = "E-waste management application"
authors = ["Your Name <your@email.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.1.0"
flask-sqlalchemy = "^3.1.1"
gunicorn = "^23.0.0"
google-cloud-vision = "^3.4.0"
google-maps-services = "^2.0.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
werkzeug = "^3.1.3"
flask-login = "^0.6.3"
email-validator = "^2.2.0"
pillow = "^11.1.0"
requests = "^2.32.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
